# EmailAssistant_AI

./: .gitattributes  .gitignore  .markdownlintignore  ARCHITECTURE.md  PLAN.md  README.md  app.py  pyproject.toml
docs/: final_documentation.md  proposal.md
skeletons/: app_skeleton.py  config_skeleton.py  llm_engine_skeleton.py  vector_store_skeleton.py
src/email_assistant/: config.py  llm_engine.py  vector_store.py
tests/: test_vector_store.py
